--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* min-width: 1100px; */
     gap: 10px;
     margin: 0 auto;
     padding: 10px 10px;
@@ -34,6 +33,18 @@ html body {
 
 .first-column li{
     display: flex;
+    border-radius: 10px;
+    border: 2px solid #2C2C2C;
+    background-color: rgb(194, 192, 192);
+    width: 95%;
+    margin: 15px 2.5px;
+    padding: 10px 10px;
+    font-size: medium;
+    font-weight: 500;
+    transition: box-shadow 0.2s ease;
+}
+/* .first-column li{
+    display: flex;
     border-radius: 100px;
     border: 2px solid #2C2C2C;
     background-color: rgb(194, 192, 192);
@@ -43,14 +54,23 @@ html body {
     font-size: 21px;
     font-weight: 500;
     transition: box-shadow 0.2s ease;
-}
+} */
 
 .first-column li:hover {
     box-shadow:-5px 5px 5px #2979FF
 }
-
+/* #exercises {
+    display: flex;
+    width: auto; 
+} */
+/* #exercises.active {
+    display: flex;
+} */
 ul li::before {
     content: "";
+}
+ul {
+    padding-left: 0;
 }
 
 .first-column {
@@ -62,19 +82,30 @@ ul li::before {
     padding: 15px;
     border: solid 2px orange;
     min-width: 300px;
+    height: fit-content;
+}
+
+.instruction {
+    padding: 20px 50px;
 }
 .lrgImg {
     display: flex;
-    max-width: 100%
+    max-width: 500px;
+    justify-content: center;
 }
 
 img {
-    max-width: 100%
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    border: solid 2px #123524;
 }
 
 .third-column {
     display: grid;
-    width: 400px;
+    flex-direction: column;
+    min-width: 300px;
+    height: fit-content;
     padding: 15px;
     grid-template-rows: min-content min-content;
     border: solid 2px yellowgreen;
@@ -84,34 +115,46 @@ img {
     text-align: end;
 }
 .form-label {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    height: auto;
     margin-right: 4px;
-    width: 200px;
-    flex-shrink: 0;
-    /* padding-right: 10px; */
+    width: 120px;
+    /* flex-shrink: 0; */
 }
-
+button {
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    margin-right: 50px;
+}
 /* testing orientation of stat box */
 .stat-container {
     border: 1px solid#f39e00;
     background-color: #2C2C2C;
-    width: fit-content;
+    max-width: 100%;
+}
+.quick-log-input {
+    max-width: 100%;
 }
 
-.card {
-    border: 1px solid red;
-    width: 350px;
-}
 .title  {
     border: 1px solid green;
     background-color: white;
     padding: 10px 10px;
     font-size: 21px;
+    font-weight: 400;
 }
 
 .stats {
     margin: 30px;
     color: whitesmoke;
     font-size: x-large;
+}
+
+.card {
+    max-width: 100%;
 }
 
 /* Styling for the muscles used elements */
@@ -132,7 +175,7 @@ img {
     background-color: #123524;
 }
 
-#primary {
+#muscle-targets {
     width: 300px
 }
 
@@ -146,33 +189,53 @@ img {
 .form-group {
     display: flex;
     margin: 20px 20px;
-    font-size: 27px;
+    font-size: large;
 
 }
 .form-group input {
-    width: 60px;
-    height: 50px;
+    width: 50px;
+    height: 45px;
     text-align: center;
-    font-size: 27px;
+    font-size: large;
     border-radius: 10px;
     margin-right: 150px;
 }
 
+#difference {
+    font-size: small;
+}
 
+.negative {
+    color: red;
+}
 
-@media (min-width: 768px) {
+.positive {
+    color: greenyellow;
+}
+
+@media (min-width: 574px) {
     .grid-container {
         flex-direction: row;
         min-width: 530px;
+        display: flex;
     }
     .first-column, .second-column, .third-column {
-        width: 100%;
+        width: 400px;
+    }
+    .first-column li{
+        display: block;
+        border-radius: 100px;
+        width: 150px; 
+        margin: 15px 0px;
+        padding: 20px 20px;
+        font-size: 21px;
     }
 }
 
 @media (min-width: 1135px) {
     .grid-container {
         margin: 0 auto;
+        display: flex;
     }
     .second-column, .third-column {
         width: 400px;
