--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ img {
 .third-column {
     display: grid;
     flex-direction: column;
-    min-width: 300px;
+    min-width: 400px;
     height: fit-content;
     padding: 15px;
     /* grid-template-rows: min-content min-content; */
@@ -153,6 +153,10 @@ button {
 }
 
 .title  {
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px;
+    display: flex;
     color: #FF7043;
     background-color: white;
     padding: 10px 0px 10px 30px;
@@ -164,8 +168,44 @@ button {
     margin: 30px 0px 30px 30px;
     color: whitesmoke;
     font-size: x-large;
-    min-width: fit-content%;
+    min-width: fit-content;
+}
+.form-box {
+    width: fit-content;
+}
+.button-box {
+    display: flex;
+	width: fit-content;
+	margin: 0;
+	position: relative;
+	border-radius: 30px;
+    border: solid 4px #FF7043;
+	background: #fff;
+}
 
+.toggle-btn {
+    font-size: small;
+    font-weight: bold;
+	padding: 0px 0px;
+	cursor: pointer;
+	background: transparent;
+	border: 0;
+    margin: 0;
+	outline: none;
+	position: relative;
+	text-align: center;
+    width: 50px;
+}
+
+#btn {
+	left: 3px;
+	top: 3px;
+	position: absolute;
+	width: 47px;
+	height: 87%;
+	background: #e67e22;
+	border-radius: 30px;
+	transition: .5s;
 }
 
 .card {
